# tetris

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linters.yml  tests.yml
tests/: __init__.py  test_check_lost.py  test_convert_shape_format.py  test_create_grid.py  test_get_shape.py  test_valid_space.py
tetris/: __init__.py  constants.py  piece.py
