[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "Tetris for one player with basic functionality movements, rotations, high score, leaderboard, tetris generations"
authors = [
    "Matej Novota <matej.novota@gmail.com>",
    "Dominik Šidlo <sidlo.domco@gmail.com>",
    "Martin Letenay <martinjr.letenay@gmail.com>",
    "Pavol Repisky <pal.repisky@gmail.com>",
    "Dmytro Herashchenko <deemahh2@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krtko1/tetris"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
